# grasp

./: CMakeLists.txt  README.md  baxter_table.scene  package.xml
src/: baxterGripper.h  graspTest.cpp  moveBaxter.cpp
